# LoG-IV

./: .env.example  .gitignore  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
config/: default.toml
docs/: benchmark_protocol.md  data.md  future_work.md  graph.md  index.md  paper_plan.md  results_snapshot.md  synthetic_benchmark.md
docs/assets/stylesheets/: extra.css
docs/audit/: development_audit_prompt.md  manuscript_audit_prompt.md
src/log_iv/: __init__.py  __main__.py  cli.py  config.py  data_fetch.py  encoder.py  gnn.py  graph.py  regularizer.py  schema.py  synthetic.py  train.py
tests/: test_cli.py  test_config.py  test_data_fetch.py  test_graph.py  test_schema.py  test_synthetic.py  test_train_artifacts.py
